k8s/manifests/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sm-app-deploy
  name: sm-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: social-media
  template:
    metadata:
      labels:
        app: social-media
      name: sm-app-pod-name
    spec:
      containers:
        - name: sm-app-container
          image: sm-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
