k8s/manifests/app/service.yml
apiVersion : v1
kind: Service
metadata:
  name: sm-app-service
spec:
  type: LoadBalancer
  selector:
    app: social-media
  ports:
    - port: 8080
      targetPort: 8080
